@@ -1,4 +1,5 @@
 0.1-82
+- logger.toc(): fix bug in discovering files ranging over days
 - as.ctd(): make temperature and salinity into vectors, if not already
 - plot.TS(): add argument use.smoothScatter
 - oce.debug(): flush the console after printing a message
